--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laracasts/flash": "^3.1",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravelcollective/html": "^6.1"
+        "laravel/ui": "^2.0",
+        "laravelcollective/html": "^6.1",
+        "laraveles/spanish": "^1.4"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
