--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.1",
-        "laraveles/spanish": "^1.4"
+        "laraveles/spanish": "^1.4",
+        "nesbot/carbon": "^2.35"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
